# neondb-for-students

./: .gitignore  labnetwork_data.csv  neondb.py  pyproject.toml  test.py
neon_with_students.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
