[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neon-with-students"
version = "0.1.0"
description = "A project using Neon PostgreSQL with pgvector support"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.7",
    "pgvector>=0.2.4",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
]



